# RevokeAI

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  README.md  RevokeAI_Statement_of_Values.md  flake.nix  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: build-container.yml  lint-frontend.yml  mkdocs-material.yml  pypi-release.yml  test-revoke-pip.yml
docker/: .env.sample  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  runpod-readme.md
docs/: CHANGELOG.md  index.md
docs/contributing/: ARCHITECTURE.md  CONTRIBUTING.md  INVOCATIONS.md  LOCAL_DEVELOPMENT.md
docs/contributing/contribution_guides/: contributingToFrontend.md  development.md  documentation.md  newContributorChecklist.md  translation.md  tutorials.md
docs/deprecated/: CLI.md  EMBIGGEN.md  INPAINTING.md  OUTPAINTING.md
docs/features/: CONCEPTS.md  CONFIGURATION.md  CONTROLNET.md  IMG2IMG.md  LOGGING.md  MODEL_MERGING.md  OTHER.md  POSTPROCESS.md  PROMPTS.md  TRAINING.md  UNIFIED_CANVAS.md  VARIATIONS.md  WATERMARK+NSFW.md  WEB.md  WEBUIHOTKEYS.md  index.md
docs/help/: diffusion.md  gettingStartedWithAI.md
docs/help/deprecated/: TROUBLESHOOT.md
docs/installation/: 010_INSTALL_AUTOMATED.md  020_INSTALL_MANUAL.md  030_INSTALL_CUDA_AND_ROCM.md  040_INSTALL_DOCKER.md  050_INSTALLING_MODELS.md  060_INSTALL_PATCHMATCH.md  070_INSTALL_XFORMERS.md  INSTALLATION.md
docs/installation/Developers_documentation/: BUILDING_BINARY_INSTALLERS.md
docs/installation/deprecated_documentation/: INSTALL_BINARY.md  INSTALL_JUPYTER.md  INSTALL_LINUX.md  INSTALL_MAC.md  INSTALL_PCP.md  INSTALL_SOURCE.md  INSTALL_WINDOWS.md
docs/nodes/: comfyToRevoke.md  communityNodes.md  contributingNodes.md  defaultNodes.md  exampleWorkflows.md  overview.md
docs/other/: TRANSLATION.md
docs/workflows/: ESRGAN_img2img_upscale w_Canny_ControlNet.json  SDXL_Text_to_Image.json  SDXL_w_Refiner_Text_to_Image.json  Text_to_Image.json
installer/: create_installer.sh  install.bat.in  readme.txt
installer/lib/: installer.py  main.py  messages.py
installer/templates/: revoke.bat.in  revoke.sh.in  update.bat.in  update.sh.in
revokeai/: README
revokeai/app/: api_app.py  cli_app.py
revokeai/app/api/: dependencies.py
revokeai/app/api/routers/: app_info.py  board_images.py  boards.py  images.py  models.py  sessions.py
revokeai/app/cli/: commands.py  completer.py
revokeai/app/invocations/: baseinvocation.py  collections.py  compel.py  controlnet_image_processors.py  cv.py  image.py  infill.py  latent.py  math.py  metadata.py  model.py  noise.py  onnx.py  param_easing.py  primitives.py  prompt.py  sdxl.py  strings.py  upscale.py
revokeai/app/models/: image.py
revokeai/app/services/: board_image_record_storage.py  board_images.py  board_record_storage.py  boards.py  events.py  graph.py  image_file_storage.py  image_record_storage.py  images.py  invocation_queue.py  invocation_services.py  invocation_stats.py  model_manager_service.py  processor.py  revoker.py  urls.py
revokeai/app/services/config/: __init__.py  base.py  revokeai_config.py
revokeai/app/services/models/: board_image.py  board_record.py  image_record.py
revokeai/app/util/: controlnet_utils.py  metadata.py  step_callback.py
revokeai/backend/: __init__.py
revokeai/backend/image_util/: __init__.py  invisible_watermark.py  lama.py  patchmatch.py  safety_checker.py  txt2mask.py
revokeai/backend/install/: check_root.py  legacy_arg_parsing.py  migrate_to_3.py  model_install_backend.py  revokeai_configure.py
revokeai/backend/model_management/: __init__.py  convert_ckpt_to_diffusers.py  model_cache.py  model_manager.py  model_merge.py  model_search.py  util.py
revokeai/backend/model_management/models/: controlnet.py  sdxl.py  stable_diffusion.py  vae.py
revokeai/backend/stable_diffusion/: __init__.py  diffusers_pipeline.py
revokeai/backend/stable_diffusion/diffusion/: __init__.py  cross_attention_control.py  shared_revokeai_diffusion.py
revokeai/backend/training/: __init__.py  textual_inversion_training.py
revokeai/backend/util/: __init__.py  attention.py  devices.py  hotfixes.py  logging.py  util.py
revokeai/configs/: INITIAL_MODELS.yaml  models.yaml.example
revokeai/configs/stable-diffusion/: v1-finetune.yaml  v1-finetune_style.yaml  v1-inference.yaml  v1-inpainting-inference.yaml  v1-m1-finetune.yaml  v2-inference-v.yaml  v2-inference.yaml
revokeai/frontend/: __init__.py  legacy_launch_revokeai.py
revokeai/frontend/CLI/: __init__.py
revokeai/frontend/install/: __init__.py  import_images.py  model_install.py  revokeai_configure.py  revokeai_update.py  widgets.py
revokeai/frontend/merge/: __init__.py  merge_diffusers.py
revokeai/frontend/training/: __init__.py  textual_inversion.py
revokeai/frontend/web/: __init__.py  index.html  package.json
revokeai/frontend/web/.husky/: pre-commit
revokeai/frontend/web/config/: vite.package.config.ts
revokeai/frontend/web/docs/: API_CLIENT.md  NODE_EDITOR.md  README.md
revokeai/frontend/web/public/locales/: ar.json  en.json  es.json  fr.json  he.json  it.json  ja.json  pl.json  pt.json  pt_BR.json  ru.json  tr.json  uk.json
revokeai/frontend/web/src/: index.ts  main.tsx
revokeai/frontend/web/src/app/components/: App.tsx  AppErrorBoundaryFallback.tsx  RevokeAIUI.tsx  ThemeLocaleProvider.tsx
revokeai/frontend/web/src/mantine-theme/: theme.ts
revokeai/frontend/web/src/theme/: theme.ts  themeTypes.d.ts
revokeai/frontend/web/static/dream_web/: test.html
revokeai/frontend/web/tests/: metadata.ts
revokeai/version/: __init__.py
scripts/: configure_revokeai.py  images2prompt.py  make_models_markdown_table.py  probe-model.py  pypi_helper.py  revokeai-cli.py  revokeai-model-install.py  revokeai-web.py  sd-metadata.py
tests/: test_config.py  test_model_manager.py  test_path.py
tests/inpainting/: original.json
tests/nodes/: test_graph_execution_state.py  test_node_graph.py  test_nodes.py  test_revoker.py  test_sqlite.py
(+74 files in other folders)
